--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@maxmind/geoip2-node": "^4.0.0",
+    "chrome-launcher": "^0.15.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodejs-traceroute": "^2.0.1"
   }
 }
