--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "diagonostics",
+  "name": "tracepath-diagonostics",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@maxmind/geoip2-node": "^4.0.0",
@@ -13,5 +14,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "nodejs-traceroute": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
