--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "lighthouse": "^10.2.0",
     "morgan": "~1.9.1",
     "nodejs-traceroute": "^2.0.1"
   },
