--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@maxmind/geoip2-node": "^4.0.0",
+    "@prisma/client": "^4.14.1",
     "chrome-launcher": "^0.15.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -15,9 +16,11 @@
     "express": "~4.16.1",
     "lighthouse": "^10.2.0",
     "morgan": "~1.9.1",
-    "nodejs-traceroute": "^2.0.1"
+    "nodejs-traceroute": "^2.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prisma": "^4.14.1"
   }
 }
